Kubernetes/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-test-lb
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: flask-app
